--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -10,6 +10,11 @@
 <div class="container">
     <div class="row">
         <h1> List Students </h1>
+        <div class = "row">
+            <div class=""col-lg-3>
+                <a th:href="@{/students/new}" class=""btn btn-primary btn-sm md-3>Add Student</a>
+            </div>
+        </div>
     </div>
     <table class = "table table-striped table-hover">
         <thead class="table-dark">
